--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@kyso/react-jupyter",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
