--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.27.3",
     "raw-loader": "^0.5.1",
     "webpack": "^2.3.2"
   },
@@ -21,6 +20,7 @@
     "@nteract/transform-vega": "^3.1.0",
     "@nteract/transforms": "^4.1.0",
     "@nteract/transforms-full": "^5.1.0",
+    "@zeit/next-css": "^0.1.5",
     "ansi_up": "^1.3.0",
     "highlight.js": "^9.10.0",
     "immutable": "^3.8.2",
